# simphony

./: .clang-format  .clang-uml  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  NOTICE.txt  README.md  pyproject.toml
CSG/: CMakeLists.txt  CSGCopy.h  CSGCopyTest.sh  CSGFoundry.cc  CSGFoundry.h  CSGImport.cc  CSGImport.h  CSGMakerTest.sh  CSGNode.cc  CSGNodeTest.sh  CSGPrim.cc  CSGPrimTest.sh  CSGRecord.h  CSGScan.cc  CSGScan.h  CSGSimtrace.hh  CSGSimtraceRerunTest.sh  CSGSimtraceSampleTest.sh  CSGTarget.cc  CSGTarget.h  CSG_API_EXPORT.hh  CU.cc  CU.h  InstanceId.h  csg.sh  csg_classify.h  csg_geochain.sh  csg_intersect_leaf.h  csg_intersect_leaf_cylinder.h  csg_intersect_leaf_halfspace.h  csg_intersect_leaf_newcone.h  csg_intersect_leaf_oldcylinder.h  csg_intersect_leaf_phicut.h  csg_intersect_leaf_trapezoid.h  csg_intersect_leaf_zsphere.h  csg_intersect_node.h  csg_intersect_tree.h  csg_pack.h  index.rst  sdf_geochain.sh
CSG/tests/: CMakeLists.txt  CSGCopyTest.cc  CSGDemoTest.cc  CSGFoundryLoadTest.cc  CSGFoundryTest.cc  CSGFoundryTestOld.sh  CSGFoundry_CreateFromSimTest.cc  CSGFoundry_GDMLBootstrap.cc  CSGFoundry_MakeCenterExtentGensteps_Test.cc  CSGFoundry_SGeo_SEvt_Test.cc  CSGFoundry_SGeo_SEvt_Test.sh  CSGFoundry_getCenterExtent_Test.cc  CSGFoundry_getFrameE_Test.cc  CSGFoundry_getFrame_Test.cc  CSGGeometryFromGeocacheTest.cc  CSGIntersectComparisonTest.cc  CSGIntersectComparisonTest.sh  CSGIntersectSolidTest.cc  CSGIntersectSolidTest.py  CSGNodeScanTest.cc  CSGNode_test.cc  CSGPrimImpTest.cc  CSGPrimTest.cc  CSGPrimTest.sh  CSGQueryTest.cc  CSGScanTest.cc  CSGScanTest.sh  CSGSolidTest.cc  CSGTargetGlobalTest.cc  CSGTargetGlobalTest.sh  CSGTargetTest.cc  CSGTestRunner.sh  DemoGeo.cc  DemoGrid.cc  csg_intersect_leaf_Sphere_test.cc  csg_intersect_leaf_templated_test.cc  csg_intersect_leaf_test.cc  csg_intersect_prim_test.cc  index.rst  intersect_leaf_cone_test.cc  (+2 more)
CSGOptiX/: CMakeLists.txt  CSGOPTIX_API_EXPORT.hh  CSGOptiX.cc  CSGOptiX.h  CSGOptiX7.cu  Frame.cc  Frame.h  InstanceId.h  PIP.cc  PIP.h  Params.cc  Params.h  SBT.cc  SBT.h  Six.cc  cxr.sh  cxr_geochain.sh  cxr_overview.sh  cxr_solid.sh  cxr_view.sh  cxs.sh  cxs_debug.sh  cxs_min.sh  cxs_raindrop.sh  cxsd.sh  cxsim.sh  cxsimulate.sh  grab.sh  image_grid.sh  index.rst  pub1.sh  tmp_grab.sh
CSGOptiX/tests/: CMakeLists.txt  CSGOptiXRenderInteractiveTest.cc  CSGOptiXRenderTest.cc  CSGOptiXRenderTest.py  CSGOptiXSimtraceTest.cc  CSGOptiXVersionTest.cc
dd4hepplugins/: CMakeLists.txt  DD4hepSensorIdentifier.hh  OpticsEvent.cc  OpticsEvent.hh  OpticsRun.cc  OpticsRun.hh  OpticsSteppingAction.cc  OpticsSteppingAction.hh
dd4hepplugins/examples/: CMakeLists.txt  benchmark_drich.py  benchmark_gpu_speedup.py  run_meta.txt  test_raindrop_dd4hep_cpu.py  test_raindrop_dd4hep_gpu.py  validate_drich.py
examples/: CMakeLists.txt  README.md  simphox.cpp
examples/AlignGpuCpuTracks/: CMakeLists.txt  StandAloneGeant4Validation.cpp  StandAloneGeant4Validation.h  compare_aligned.py  generate_precooked_rng.cu  plot_divergent_tracks.py  raindrop.json  raindrop_sphere.json  sphere_leak_simple.gdml
examples/GPURaytraceQuasi/: CMakeLists.txt  GPURaytraceQuasi.cpp  GPURaytraceQuasi.h
examples/GPURaytraceSubEvt/: CMakeLists.txt  GPURaytraceSubEvt.cpp  GPURaytraceSubEvt.h
examples/MC_Truth/: CMakeLists.txt  GPUMCTruth.cpp  GPUMCTruth.h  GPURaytrace.cpp  GPURaytrace.h  run.sh
examples/async_gpu_launch/: CMakeLists.txt  README.md  async_gpu_launch.cpp  async_gpu_launch.h  run.sh
examples/async_gpu_std/: CMakeLists.txt  async_gpu_std.cpp  async_gpu_std.h  run.mac  run.sh
examples/dd4hep/: CMakeLists.txt  benchmark_gpu_speedup.py  test_raindrop_cpu.py  test_raindrop_dd4hep.py  test_raindrop_dd4hep_cpu.py
examples/drich/: CMakeLists.txt  README.md  drich_ag02.gdml  drich_gdml_main.cc  run.sh
examples/photontiming_geant4/: README.md  photontimingandsteps.sh
examples/simphox/: CMakeLists.txt  run.sh  simphox.cpp
examples/synrad/: CMakeLists.txt  README.md  run.sh  speedup.sh  synrad.cpp  synrad_bench.gdml  synrad_g4.cpp  synrad_gun.h
examples/viztracks/: CMakeLists.txt  OpticksTrajectory.h  viztracks.cpp
g4cx/tests/: CMakeLists.txt  G4CXApp.h  G4CXOpticks_SetGeometry_GetInputPhoton_Test.cc  (+5 more)
qudarap/: CMakeLists.txt  QBnd.cc  QBnd.hh  QDebug.cc  QEvt.cc  QEvt.cu  QEvt.hh  QGXS.cc  QGXS.hh  QPMT.cc  QPMT.cu  QPMT.hh  QPMT_MOCK.h  QRng.cc  QRng.hh  QSim.cc  QSim.cu  QSim.hh  QState.hh  QTexRotate.cc  QU.cc  QUDARAP_API_EXPORT.hh  QWls.cc  QWls.hh  qbnd.h  qgxs.h  qgxs_synradg4.h  qpmt.h  qpmt_enum.h  qrng.h  qsim.h  qudarap.bash  qutil.h  qwls.h
src/: CMakeLists.txt  G4ValidationGenstep.cpp  G4ValidationGenstep.h  GPUCerenkov.cpp  GPUCerenkov.h  GPUPhotonFileSource.cpp  GPUPhotonSource.cpp  GPUPhotonSource.h  GPUPhotonSourceMinimal.cpp  GPUPhotonSourceMinimal.h  GPURaytrace.cpp  GPURaytrace.h  StandAloneGeant4Validation.cpp  StandAloneGeant4Validation.h  config.cpp  config.h  config_path.h.in  g4app.h  simg4ox.cpp  simtox.cpp  torch.cpp  torch.h
sysrap/: CMakeLists.txt  CUDA_CHECK.h  CheckGeo.cc  CheckGeo.hh  FlowAction.h  NPFold.h  NPX.h  OPTICKS_LOG.hh  OpticksCSG.h  OpticksPhoton.cc  OpticksPhoton.hh  SBit.cc  SBit.hh  SCSGPrimSpec.h  SCUDA_Mesh.h  SCUDA_MeshGroup.h  SDigest.cc  SEnabled.cc  SEvent.cc  SEvent.hh  SEventConfig.cc  SEventConfig.hh  SEvt.cc  SEvt.hh  SFrameGenstep.cc  SFrameGenstep.hh  SGLFW.h  SGLFW_Evt.h  SGLFW_Mesh.h  SGLFW_Program.h  SGLM.h  SGen.h  SGenerate.h  SGeo.hh  SIMG.h  SLOG.cc  SLOG.hh  SLOG.rst  SLOG_review.rst  SLaunchSequence.h  (+87 more)
tests/: CMakeLists.txt  check_simg4ox_multievent.py  compare_ab.py  g4trap_compare.py  g4trap_validation.sh  run.mac  run_5evt.mac  run_validate.mac  run_validate_10evt.mac  run_validate_10evt_1t.mac  run_validate_5evt_1t.mac  test_GPUPhotonFileSource.sh  test_GPUPhotonSource_8x8SiPM.sh  test_GPURaytrace.sh  test_drich_gdml.sh  test_opticks.sh  test_simg4ox.sh  test_simg4ox_multievent.sh  test_synrad_electrons.sh  test_synrad_example.sh  test_trapezoid_intersect.py  test_triangulated.sh  test_triangulated_multi.sh  test_wavelength_shifting.sh
(+361 files in other folders)
