[project]
name = "optiphy"
version = "0.3.0"
description = ""
authors = [ { name = "Dmitri Smirnov", email = "dmixsmi@gmail.com" } ]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pyvista>=0.43.8",
    "plotly>=5.22.0",
]

[project.scripts]
generate-input-photons = "optiphy.tools.generate_input_photons:main"
plot-csg = "optiphy.tools.plot_csg:main"
serve-path = "optiphy.tools.serve_path:main"
run-performance = "optiphy.tools.run_performance:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["optiphy"]
